; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/ifconfig/extr_ifvxlan.c_do_cmd.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/ifconfig/extr_ifvxlan.c_do_cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.ifdrv = type { i64, i8*, i32, i32 }

@ifr = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@SIOCSDRVSPEC = common dso_local global i32 0, align 4
@SIOCGDRVSPEC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i8*, i64, i32)* @do_cmd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @do_cmd(i32 %0, i32 %1, i8* %2, i64 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca %struct.ifdrv, align 8
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  store i32 %4, i32* %10, align 4
  %12 = call i32 @bzero(%struct.ifdrv* %11, i32 24)
  %13 = getelementptr inbounds %struct.ifdrv, %struct.ifdrv* %11, i32 0, i32 3
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ifr, i32 0, i32 0), align 4
  %16 = call i32 @strlcpy(i32 %14, i32 %15, i32 4)
  %17 = load i32, i32* %7, align 4
  %18 = getelementptr inbounds %struct.ifdrv, %struct.ifdrv* %11, i32 0, i32 2
  store i32 %17, i32* %18, align 8
  %19 = load i64, i64* %9, align 8
  %20 = getelementptr inbounds %struct.ifdrv, %struct.ifdrv* %11, i32 0, i32 0
  store i64 %19, i64* %20, align 8
  %21 = load i8*, i8** %8, align 8
  %22 = getelementptr inbounds %struct.ifdrv, %struct.ifdrv* %11, i32 0, i32 1
  store i8* %21, i8** %22, align 8
  %23 = load i32, i32* %6, align 4
  %24 = load i32, i32* %10, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %5
  %27 = load i32, i32* @SIOCSDRVSPEC, align 4
  br label %30

28:                                               ; preds = %5
  %29 = load i32, i32* @SIOCGDRVSPEC, align 4
  br label %30

30:                                               ; preds = %28, %26
  %31 = phi i32 [ %27, %26 ], [ %29, %28 ]
  %32 = call i32 @ioctl(i32 %23, i32 %31, %struct.ifdrv* %11)
  ret i32 %32
}

declare dso_local i32 @bzero(%struct.ifdrv*, i32) #1

declare dso_local i32 @strlcpy(i32, i32, i32) #1

declare dso_local i32 @ioctl(i32, i32, %struct.ifdrv*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
